[gd_scene load_steps=2 format=3 uid="uid://b4jog4aeqseou"]

[ext_resource type="Script" uid="uid://durjcp83x3yjm" path="res://source/client/ui/inventory/trade_request_modal.gd" id="1_bd6g8"]

[node name="TradeRequestModal" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_bd6g8")

[node name="YourOffer" type="PanelContainer" parent="."]
clip_contents = true
custom_minimum_size = Vector2(0, 80)
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -93.0
offset_right = 93.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="YourOffer"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 12

[node name="Title" type="RichTextLabel" parent="YourOffer/VBoxContainer"]
custom_minimum_size = Vector2(0, 24)
layout_mode = 2
bbcode_enabled = true
text = "[b]Trade Request[/b]"
horizontal_alignment = 1

[node name="PlayerRequesting" type="Label" parent="YourOffer/VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 0
text = "[Player]"
horizontal_alignment = 1
autowrap_mode = 3

[node name="Description" type="Label" parent="YourOffer/VBoxContainer"]
custom_minimum_size = Vector2(24, 24)
layout_mode = 2
size_flags_vertical = 0
text = "would like to trade."
horizontal_alignment = 1
autowrap_mode = 3

[node name="HBoxContainer" type="HBoxContainer" parent="YourOffer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="YourOffer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Cancel"

[node name="Accept" type="Button" parent="YourOffer/VBoxContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Accept"
